kubernetes/base/platform-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-api
  labels:
    name: platform-team
    owner: platform-team
    environment: dev
