kubernetes/base/platform-api/opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: platform-api
spec:
  selector:
    app: opa
  ports:
    - port: 8181
      targetPort: 8181
